--- a/spa/src/index.css
+++ b/spa/src/index.css
@@ -6,8 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root, main {
+  height: 100%
 }
+
+h1, h2, h3, h4 {
+  color: #000000;
+}
+
