--- a/spa/src/components/App/index.scss
+++ b/spa/src/components/App/index.scss
@@ -27,8 +27,14 @@
   background-color: #fafafa;
   border: 1px solid #e4e4e7;
   border-radius: 0.625rem;
-  font-weight: 500;
+  display: flex;
+  font-weight: 600;
   padding: 1rem;
+
+  & .icon-audio {
+    position: absolute;
+    left: 2rem;
+  }
 }
 
 #feedback-container {
