--- a/spa/src/components/App/index.scss
+++ b/spa/src/components/App/index.scss
@@ -29,6 +29,7 @@
   border-radius: 0.625rem;
   display: flex;
   font-weight: 600;
+  justify-content: center;
   padding: 1rem;
 
   & .icon-audio {
