--- a/spa/src/components/App/index.scss
+++ b/spa/src/components/App/index.scss
@@ -8,6 +8,7 @@
 }
 
 #recording-container {
+  align-items: center;
   background-color: #ffffff;
   border-radius: 20px 20px 0px 0px;
   border-top: 1px solid #eeeeee;
@@ -16,6 +17,10 @@
   justify-content: space-between;
   min-height: 200px;
   padding: 1rem 1rem 2rem;
+
+  & > div {
+    width: 100%;
+  }
 }
 
 #image-container img {
@@ -24,17 +29,22 @@
 }
 
 #phrase-container {
+  align-items: center;
   background-color: #fafafa;
   border: 1px solid #e4e4e7;
   border-radius: 0.625rem;
   display: flex;
   font-weight: 600;
   justify-content: center;
+  margin: 0 auto;
+  max-width: 28rem;
   padding: 1rem;
 
-  & .icon-audio {
-    position: absolute;
-    left: 2rem;
+  & .phrase-icon {
+    max-width: max-content;
+  }
+  & .phrase-text {
+    flex: 1;
   }
 }
 
